--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-#
-# application.yml — главный конфигурационный файл Spring Boot.
 server:
   port: 8888
 
@@ -11,12 +9,12 @@ spring:
     password: ${DB_PASSWORD}
   liquibase:
     enabled: true
-    change-log: classpath:db/migration/changelog/db.changelog-master.yaml
+    change-log: classpath:db/migration/changelog/db.changelog.yaml
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
@@ -41,11 +39,3 @@ jwt:
   expiration: ${JWT_EXPIRATION_TIME}
   header: Authorization
   prefix: Bearer
-
-
-
-#Что нужно сделать:
-#  - Указать настройки подключения к базе данных.
-#  - Указать порт приложения.
-#  - Настроить параметры безопасности и JWT.
-#  - Включить Swagger UI.
