--- a/src/main/resources/db/migration/changelog/db.changelog.yaml
+++ b/src/main/resources/db/migration/changelog/db.changelog.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/migration/changelog/changeset/V2__create_cards.sql
   - include:
       file: db/migration/changelog/changeset/V3__create_transactions.sql
+  - include:
+      file: db/migration/changelog/changeset/V4__create_tokens.sql
