--- a/src/main/resources/db/migration/changelog/db.changelog.yaml
+++ b/src/main/resources/db/migration/changelog/db.changelog.yaml
@@ -1,9 +1,11 @@
 databaseChangeLog:
   - include:
-      file: db/migration/changelog/changeset/V1__create_users.sql
+      file: db/migration/changelog/changeset/V1__create_roles.sql
   - include:
-      file: db/migration/changelog/changeset/V2__create_cards.sql
+      file: db/migration/changelog/changeset/V2__create_users.sql
   - include:
-      file: db/migration/changelog/changeset/V3__create_transactions.sql
+      file: db/migration/changelog/changeset/V3__create_cards.sql
   - include:
-      file: db/migration/changelog/changeset/V4__create_tokens.sql
+      file: db/migration/changelog/changeset/V4__create_transactions.sql
+  - include:
+      file: db/migration/changelog/changeset/V5__create_tokens.sql
